objects/Institute__c.object
<CustomObject>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <label>Alias Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>Courses available.</description>
        <label>Course</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java fullstack</fullName>
                </value>
                <value>
                    <fullName>python fullstack</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>DevOps</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Manual Testing</fullName>
                </value>
                <value>
                    <fullName>others</fullName>
                </value>
                <value>
                    <fullName>Dot net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <displayFormat>I-{000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>online</label>
        <type>Checkbox</type>
    </fields>
    <label>Institute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Institute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institutes</pluralLabel>
    <recordTypes>
        <fullName>institute</fullName>
        <active>true</active>
        <label>institute</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>